--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NebulaMC - about</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>NebulaMC - Cool Page</title>
+    <link rel="stylesheet" href="cool-styles.css">
 </head>
 <body>
     <!-- Hamburger Menu -->
-    <div class="DEVELOPERS">
+    <div class="hamburger-menu">
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">
             <div class="menu-line"></div>
@@ -26,10 +26,11 @@
         </nav>
     </div>
 
-    <!-- Page content -->
-    <div class="content">
-        <h2>Welcome to another page!</h2>
-        <!-- Your content here -->
+    <!-- Page Content -->
+    <div class="cool-content">
+        <h1 class="neon-heading">Welcome to NebulaMC</h1>
+        <p class="cool-text">Explore the Nebula, where the adventure begins. Join the coolest Minecraft server ever!</p>
+        <a href="index.html" class="neon-button">Go Home</a>
     </div>
 </body>
 </html>
