--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NebulaMC - Cool Page</title>
+    <title>NebulaMC - About</title>
     <link rel="stylesheet" href="cool-styles.css">
 </head>
 <body>
-    <!-- Hamburger Menu -->
-    <div class="hamburger-menu">
+    <!-- about -->
+    <div class="Staff team">
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">
             <div class="menu-line"></div>
