--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NebulaMC - About</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cool-styles.css">
 </head>
 <body>
     <!-- about -->
