--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
         <h1 class="neon-heading">Welcome to NebulaMC</h1>
         <p class="cool-text">Explore the Nebula, where the adventure begins. Join the coolest Minecraft server ever!</p>
         <a href="index.html" class="neon-button">Go Home</a>
+        <h1 class="Staff Team">Staff team</h1>
+        <h1 class="DEVELOPER">DEVELOPER</h1>
+        <a class="ender" >enderzombie - main developer</a>
     </div>
 </body>
 </html>
