--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NebulaMC - About</title>
+    <title>ARISTAL MC - About</title>
     <link rel="stylesheet" href="cool-styles.css">
 </head>
 <body>
@@ -28,8 +28,8 @@
 
     <!-- Page Content -->
     <div class="cool-content">
-        <h1 class="neon-heading">Welcome to NebulaMC</h1>
-        <p class="cool-text">Explore the Nebula, where the adventure begins. Join the coolest Minecraft server ever!</p>
+        <h1 class="neon-heading">Welcome to ARISTAL MC</h1>
+        <p class="cool-text">Explore the ARISTALMC, where the adventure begins. Join the coolest Minecraft server ever!</p>
         <a href="index.html" class="neon-button">Go Home</a>
         <h1 class="Staff Team">Staff team</h1>
         <h1 class="DEVELOPER">DEVELOPER</h1>
