--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft SMP Chat</title>
+    <title>MineZoneSmpS2 Chat</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     </div>
 
     <script>
-        const ws = new WebSocket('ws://your-server-ip:3000');
+        const ws = new WebSocket('ws://5.9.41.143:33400');
 
         ws.onmessage = (event) => {
             const chatbox = document.getElementById('chatbox');
