--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARISTAL MC - Home</title>
+    <title>MineZone - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="glow-title">ARISTRAL MC</h1>
+        <h1 class="glow-title">MineZoneSmp</h1>
         <div class="button-container">
             <a href="index.html" class="glow-button">Home</a>
             <a href="shop.html" class="glow-button">Shop</a>
